# MasterTheGameOfConnect4

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  MCTS.cpp  MCTS.h  Master_1.cpp  Movement.cpp  Movement.h  Node.cpp  Node.h  README.md  STcpClient.h  Team_1.cpp  actor.py  actor_and_learner.ipynb  cpp_notes.md  game.py  mcts.cpp  mcts_with_simulation.py  module.cpp  new_gen_block_move.cpp  plot_2d_distribution.py  plot_state.py  plot_state_and_output.py  tools.h  trainning_config.yaml  util.cpp  util.py
connect4_3d_ai/: connect4_3d_ai.py
connect4_3d_ai/src/: Engine.cpp  MCTS.h  Node.cpp  Node.h  Properties.cpp  Properties.h  plot_state.py
data/group_project/submitted_codes/: Team_1.cpp
self_play_learning/: actor_and_learner.ipynb  config.yaml  mcts_with_simulation.py
self_play_learning/not_trained_trajectories/: 2021_05_04_21_48_43.json  2021_05_04_21_53_29.json  2021_05_04_22_00_21.json  2021_05_04_22_04_29.json  2021_05_04_22_08_50.json  2021_05_04_22_13_27.json  2021_05_04_22_17_52.json  2021_05_04_22_22_12.json  2021_05_04_22_27_32.json  2021_05_04_22_32_34.json
